--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,5 +46,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=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"></script>
   </body>
 </html>
